[cas 2 ] : fonctionne OK